# ExampleApplication

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pom.xml
frontend/: Cargo.toml  index.html  trunk.toml
frontend/src/: main.rs
frontend/src/assets/: mod.rs
frontend/src/components/: mod.rs  sidebar.rs  view.rs
frontend/src/data/: mod.rs
frontend/styles/: index.scss
src/main/java/: module-info.java
src/main/java/com/github/perdia/ExampleApplication/: ApiController.java  AppMimeMapping.java  ExampleApplication.java
src/main/java/com/github/perdia/ExampleApplication/Blog/: BlogInner.java  BlogObject.java
src/main/java/com/github/perdiadb/exampleapplication/: Application.java  Controller.java
src/main/resources/: .env  application.properties
src/main/resources/com/github/perdiadb/exampleapplication/: index.fxml
src/main/resources/frontend/: Cargo.toml  trunk.toml
src/main/resources/frontend/src/: main.rs
src/main/resources/frontend/src/components/: sidebar.rs
src/main/resources/frontend/src/data/: mod.rs
src/main/resources/static/: frontend.js  frontend_bg.wasm  index.css  index.html  portfolio.js  portfolio_bg.wasm
src/test/java/com/github/perdia/ExampleApplication/: ExampleApplicationTests.java
